puppy watch sensortag tagging app

--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 buildscript {
     repositories {
         jcenter()
-       //google()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
