--- a/BleSensorTag/src/main/AndroidManifest.xml
+++ b/BleSensorTag/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-sdk
         android:minSdkVersion="27"
@@ -50,6 +52,11 @@
             android:parentActivityName="MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden" 
             android:screenOrientation="unspecified" />
+        <activity
+            android:name="com.example.ti.ble.sensortag.TagListActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="unspecified"
+            android:parentActivityName="MainActivity"/>
         <activity
             android:name="com.example.ti.ble.sensortag.FwUpdateActivity"
             android:parentActivityName="DeviceActivity"
